--- a/Year-2/Theory-of-probabilities/module-1/tasks.tex
+++ b/Year-2/Theory-of-probabilities/module-1/tasks.tex
@@ -7,7 +7,7 @@
 
 \noindent~1) $A \setminus B = A \overline{B}$
 
-\noindentПусть $\omega \in A \setminus B$. Тогда $\omega \in A$, $\omega \not\in B$, $
+\noindentДоказательство: Пусть $\omega \in A \setminus B$. Тогда $\omega \in A$, $\omega \not\in B$, $
 \omega \in \overline{B}$. Это означает, что $\omega \in A\overline{B}$. 
 В обратную сторону, $\omega \in A\overline{B} \Rightarrow \omega \in A$, $\omega \in 
 \overline{B}$, $\omega \not\in B \Rightarrow \omega \in A \setminus B$.
@@ -15,7 +15,8 @@
 \medskip
 \noindent~2) $A \setminus B = A \setminus AB = \left( A + B \right)  \setminus B$.
 
-\noindent a) Пусть $\omega \in A \setminus B \Rightarrow \omega \in A$, $\omega \not\in AB$, так 
+\noindent Доказательство:
+a) Пусть $\omega \in A \setminus B \Rightarrow \omega \in A$, $\omega \not\in AB$, так 
 как $\omega \not\in B \Rightarrow \omega \in A \setminus AB$. 
 b) Пусть $\omega \in A, \omega \not\in
 AB$. Из второго $\omega \not\in$ или $A$ или $B$, но поскольку $\omega \in A$, то $\omega \not\in
@@ -29,7 +30,7 @@ c) Пусть $\omega \in (A + B) \setminus B$, по уже проделанно
 \noindent~3) $\overline{\left( A + B \right) } = \overline{A}~\overline{B}$, $\overline{AB} = \overline{A} + 
 \overline{B}$
 
-\noindent a) Пусть $\omega \in \overline{A + B} \Rightarrow \omega \not\in A$, $\omega \not\in B 
+\noindent Доказательство: a) Пусть $\omega \in \overline{A + B} \Rightarrow \omega \not\in A$, $\omega \not\in B 
 \Leftrightarrow \omega \in \overline{A}, \omega \in \overline{B} \Rightarrow \omega \in \overline{A}~
 \overline{B}$. Обратное доказывается аналогично. b) Пусть $\omega \in \overline{AB} \Leftrightarrow 
 \omega \not\in AB$. Тогда $\omega \not\in A$ или $\omega \not\in B$ или в обоих сразу. НУО считаем, что
@@ -41,7 +42,7 @@ $\omega \not\in A \Rightarrow \omega \in \overline{A}$, а значит что $
 \medskip
 \noindent~4) $A \left( B \setminus C \right) = AB \setminus AC$
 
-\noindent a) Пусть $\omega \in A$, $\omega \in \left( B \setminus C \right) \Leftrightarrow \omega
+\noindent Доказательство: a) Пусть $\omega \in A$, $\omega \in \left( B \setminus C \right) \Leftrightarrow \omega
 \in A $, $\omega \in \left( B \setminus C \right) $. Из второго $\omega \in B, \omega \in \overline{C}$.
 Тогда $\omega \in AB$ и $\omega \in A\overline{C} \Rightarrow \omega \not\in AC$, поскольку
 $\omega$ должен лежать в $A$ и $C$. Получаем $\omega \in AB \overline{\left( AC \right)} $, а это по первому пункту 
@@ -50,7 +51,9 @@ $\omega$ должен лежать в $A$ и $C$. Получаем $\omega \in A
  \omega \in B$ и $\omega \not\in AC \Rightarrow \omega \not\in C \Rightarrow \omega \in A, \omega
 \in B\overline{C} \Rightarrow \omega \in A \left( B \setminus C \right)$. 
 
+
 \subsection{Установить, какие из следующих соотношений правильные}
+
 \noindent~1) $A \setminus \left( B \setminus C \right) = \left( A \setminus B \right) + C$
 
 \noindent С левой стороны $A \setminus \left( B \setminus C \right) = A \overline{\left( 
@@ -85,6 +88,11 @@ B  \overline{C}\right) } = A \left( \overline{B} + C \right) = A \setminus B + A
 \noindent $\left(A \setminus B\right) \left(C \setminus D\right) = A\overline{B}C\overline{D} =
 \left(AC\right)\left(\overline{B}~\overline{D}\right) = \left(AC\right)\overline{\left(
 B + D\right)} = \left(AC\right) \setminus \left(B + D\right)$. Неверно.
+
+\bigskip
+\noindentОтвет: неверно: 1), 4), 6); верно: 2), 3), 5)
+
+
 \subsection{Упростить следующие выражения}
 
 \noindent~1) $A + AB = A$ 
@@ -100,6 +108,10 @@ B + D\right)} = \left(AC\right) \setminus \left(B + D\right)$. Неверно.
 \noindent~4) $\left(A + B\right)\left(\overline{A} + B\right)\left(A + \overline{B}\right) = 
 \left(A + \overline{A}\right)B\left(A + \overline{B}\right) = B\left(A + \overline{B}\right) = 
 BA + B\overline{B} = BA$
+
+\bigskip
+\noindentОтвет: 1) $A$, 2) $A$, 3) $\emptyset$, 4) $BA$
+
 
 \subsection{Пусть}
 \[
@@ -120,6 +132,9 @@ BA + B\overline{B} = BA$
 \noindent b) При $n \to \infty$ для $B_n$ $x : a \le x \le b$, поскольку $\lim_{n \to \infty} b - \frac{1}{n} = b $.
 Поэтому $B$ = $\left\{x: a \le x \le b\right\}$.
 
+\bigskip
+\noindentОтвет: a) $A = a$, b) $B = \left\{x: a \le x \le b\right\}$
+
 
 \subsection{Какие подмножества множества $\Omega$ в примере 3 из пар.1 при $n = 3$ соответствуют
 событиям}
@@ -131,6 +146,9 @@ BA + B\overline{B} = BA$
 
 \medskip
 \noindent~3) Выпало не более одного герба: $A = \{$РРР, РРГ, РГР, ГРР$\}$
+
+\bigskip
+\noindentОтвет: 1) $\{$ГРР, ГРГ, ГГР, ГГГ$\}$, 2) $\{$РГГ, ГРГ, ГГР$\}$, 3) $\{$РРР, РРГ, РГР, ГРР$\}$
 
 
 \subsection{Пусть $A, B, C$ -- три произвольных события. Найти выражения для событий, состоящих
@@ -166,4 +184,5 @@ BA + B\overline{B} = BA$
 \Omega \in U$, также если $\{$ГГГ, ГРГ, ГГР, ГРР$\} \in U$, то и $\Omega \setminus \{$ГГГ, ГРГ, ГГР, ГРР$\} = 
 \{$РГГ, РРГ, РГР, РРР$\} \in U$. Верно.
 
-
+\bigskip
+\noindentОтвет: Да.
