--- a/Year-2/Theory-of-probabilities/module-1/tasks.tex
+++ b/Year-2/Theory-of-probabilities/module-1/tasks.tex
@@ -3,19 +3,29 @@
 \section{Вероятностное пространство.}
 % \subimport{tasks}{task-1.tex}
 
-\subsection{Проверить следующие соотношения между событиями}
+%---------------------------------------------------------------------------------------------------
+\begin{task}{1} 
+  Проверить следующие соотношения между событиями: 
+\end{task}
 
-\noindent~1) $A \setminus B = A \overline{B}$
 
-\noindentДоказательство: Пусть $\omega \in A \setminus B$. Тогда $\omega \in A$, $\omega \not\in B$, $
+\begin{subtask}{1}
+  $A \setminus B = A \overline{B}$
+\end{subtask}
+
+\begin{solution}
+Пусть $\omega \in A \setminus B$. Тогда $\omega \in A$, $\omega \not\in B$, $
 \omega \in \overline{B}$. Это означает, что $\omega \in A\overline{B}$. 
 В обратную сторону, $\omega \in A\overline{B} \Rightarrow \omega \in A$, $\omega \in 
 \overline{B}$, $\omega \not\in B \Rightarrow \omega \in A \setminus B$.
+\end{solution}
 
-\medskip
-\noindent~2) $A \setminus B = A \setminus AB = \left( A + B \right)  \setminus B$.
 
-\noindent Доказательство:
+\begin{subtask}{2}
+$A \setminus B = A \setminus AB = \left( A + B \right)  \setminus B$.
+\end{subtask}
+
+\begin{solution}
 a) Пусть $\omega \in A \setminus B \Rightarrow \omega \in A$, $\omega \not\in AB$, так 
 как $\omega \not\in B \Rightarrow \omega \in A \setminus AB$. 
 b) Пусть $\omega \in A, \omega \not\in
@@ -25,12 +35,16 @@ B$, так как $(A + B) \setminus B = (A \setminus B) + (B \setminus B) = A \
 A \setminus B$. 
 c) Пусть $\omega \in (A + B) \setminus B$, по уже проделанному выше получаем $\omega
 \in A \setminus B$.
+\end{solution}
 
-\medskip
-\noindent~3) $\overline{\left( A + B \right) } = \overline{A}~\overline{B}$, $\overline{AB} = \overline{A} + 
+
+\begin{subtask}{3}
+$\overline{\left( A + B \right) } = \overline{A}~\overline{B}$, $\overline{AB} = \overline{A} + 
 \overline{B}$
+\end{subtask}
 
-\noindent Доказательство: a) Пусть $\omega \in \overline{A + B} \Rightarrow \omega \not\in A$, $\omega \not\in B 
+\begin{solution}
+a) Пусть $\omega \in \overline{A + B} \Rightarrow \omega \not\in A$, $\omega \not\in B 
 \Leftrightarrow \omega \in \overline{A}, \omega \in \overline{B} \Rightarrow \omega \in \overline{A}~
 \overline{B}$. Обратное доказывается аналогично. b) Пусть $\omega \in \overline{AB} \Leftrightarrow 
 \omega \not\in AB$. Тогда $\omega \not\in A$ или $\omega \not\in B$ или в обоих сразу. НУО считаем, что
@@ -38,11 +52,15 @@ $\omega \not\in A \Rightarrow \omega \in \overline{A}$, а значит что $
 \overline{B}$. Для остальных случаев доказывается аналогично. В обратную сторону, пусть $\omega \in
 \overline{A} + \overline{B}$. НУО считаем, что $\omega \in \overline{A} \Rightarrow \omega \not\in A$, 
 а тогда $\omega \not\in A B \Leftrightarrow \omega \in \overline{AB}$.
+\end{solution}
 
-\medskip
-\noindent~4) $A \left( B \setminus C \right) = AB \setminus AC$
 
-\noindent Доказательство: a) Пусть $\omega \in A$, $\omega \in \left( B \setminus C \right) \Leftrightarrow \omega
+\begin{subtask}{4}
+$A \left( B \setminus C \right) = AB \setminus AC$
+\end{subtask}
+
+\begin{solution}
+a) Пусть $\omega \in A$, $\omega \in \left( B \setminus C \right) \Leftrightarrow \omega
 \in A $, $\omega \in \left( B \setminus C \right) $. Из второго $\omega \in B, \omega \in \overline{C}$.
 Тогда $\omega \in AB$ и $\omega \in A\overline{C} \Rightarrow \omega \not\in AC$, поскольку
 $\omega$ должен лежать в $A$ и $C$. Получаем $\omega \in AB \overline{\left( AC \right)} $, а это по первому пункту 
@@ -50,51 +68,91 @@ $\omega$ должен лежать в $A$ и $C$. Получаем $\omega \in A
  \Rightarrow \omega \in AB$, $\omega \not\in AC$. Поскольку $\omega \in AB \Rightarrow \omega \in A, 
  \omega \in B$ и $\omega \not\in AC \Rightarrow \omega \not\in C \Rightarrow \omega \in A, \omega
 \in B\overline{C} \Rightarrow \omega \in A \left( B \setminus C \right)$. 
+\end{solution}
 
 
-\subsection{Установить, какие из следующих соотношений правильные}
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{2}
+  Установить, какие из следующих соотношений правильные:
+\end{task}
 
-\noindent~1) $A \setminus \left( B \setminus C \right) = \left( A \setminus B \right) + C$
 
-\noindent С левой стороны $A \setminus \left( B \setminus C \right) = A \overline{\left( 
+\begin{subtask}{1}
+  $A \setminus \left( B \setminus C \right) = \left( A \setminus B \right) + C$
+\end{subtask}
+
+\begin{solution}
+С левой стороны $A \setminus \left( B \setminus C \right) = A \overline{\left( 
 B  \overline{C}\right) } = A \left( \overline{B} + C \right) = A \setminus B + A C$. Неверно.
+\end{solution}
 
-\medskip
-\noindent~2) $A \setminus \left( B \setminus C \right) = \left( A \setminus B \right) + AC$
 
-\noindentВерно и доказано в пункте 1.
+\begin{subtask}{2}
+$A \setminus \left( B \setminus C \right) = \left( A \setminus B \right) + AC$
+\end{subtask}
 
-\medskip
-\noindent~3) $\left( A + B \right) \setminus C = \left( A \setminus C \right) + \left( B \setminus C \right) $
+\begin{solution}
+Верно и доказано в пункте 1.
+\end{solution}
 
-\noindent $\left( A + B \right) \setminus C \Leftrightarrow \omega \in \left(A + B\right),
+
+\begin{subtask}{3}
+ $\left( A + B \right) \setminus C = \left( A \setminus C \right) + \left( B \setminus C \right) $ 
+\end{subtask}
+
+\begin{solution}
+$\left( A + B \right) \setminus C \Leftrightarrow \omega \in \left(A + B\right),
 \omega \in \overline{C} \Leftrightarrow \omega \in A\overline{C} $ или $ \omega \in B\overline{C}$, 
 а это тоже самое что и $\omega \in \left(A \setminus C\right) + \left(B \setminus C\right)$. Верно
+\end{solution}
 
-\medskip
-\noindent~4) $\left( A + B \right)  \setminus C = A + \left( B \setminus C \right) $
 
-\noindent Неверно, доказано обратное в пункте выше.
+\begin{subtask}{4}
+$\left( A + B \right)  \setminus C = A + \left( B \setminus C \right) $
+\end{subtask}
 
-\medskip
-\noindent~5) $A\overline{B}C \subset A + B$
+\begin{solution}
+Неверно, доказано обратное в пункте выше.
+\end{solution}
 
-\noindent Множество, получающееся справа как минимум не меньше, чем $A$, а значит оно является 
+
+\begin{subtask}{5}
+$A\overline{B}C \subset A + B$
+\end{subtask}
+
+\begin{solution}
+Множество, получающееся справа как минимум не меньше, чем $A$, а значит оно является 
 подмножеством $A + B$.
+\end{solution}
 
-\medskip
-\noindent~6) $\left(A \setminus B\right)\left(C \setminus D\right) = AC \setminus BD$
 
-\noindent $\left(A \setminus B\right) \left(C \setminus D\right) = A\overline{B}C\overline{D} =
+\begin{subtask}{6}
+$\left(A \setminus B\right)\left(C \setminus D\right) = AC \setminus BD$
+\end{subtask}
+
+\begin{solution}
+$\left(A \setminus B\right) \left(C \setminus D\right) = A\overline{B}C\overline{D} =
 \left(AC\right)\left(\overline{B}~\overline{D}\right) = \left(AC\right)\overline{\left(
 B + D\right)} = \left(AC\right) \setminus \left(B + D\right)$. Неверно.
-
-\bigskip
-\noindentОтвет: неверно: 1), 4), 6); верно: 2), 3), 5)
+\end{solution}
 
 
-\subsection{Упростить следующие выражения}
+\medskip
+\begin{result}
+неверно: 1), 4), 6); верно: 2), 3), 5)
+\end{result}
 
+
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{3}
+Упростить следующие выражения:
+\end{task}
+
+\begin{solution}
+
+\smallskip
 \noindent~1) $A + AB = A$ 
 
 \medskip
@@ -108,12 +166,18 @@ B + D\right)} = \left(AC\right) \setminus \left(B + D\right)$. Неверно.
 \noindent~4) $\left(A + B\right)\left(\overline{A} + B\right)\left(A + \overline{B}\right) = 
 \left(A + \overline{A}\right)B\left(A + \overline{B}\right) = B\left(A + \overline{B}\right) = 
 BA + B\overline{B} = BA$
-
-\bigskip
-\noindentОтвет: 1) $A$, 2) $A$, 3) $\emptyset$, 4) $BA$
+\end{solution}
 
 
-\subsection{Пусть}
+\begin{result}
+1) $A$, 2) $A$, 3) $\emptyset$, 4) $BA$
+\end{result}
+
+
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{4}
+Пусть
 \[
   A_n = \left\{x: a \le x < a + \frac{1}{n}\right\} 
 .\] 
@@ -124,21 +188,32 @@ BA + B\overline{B} = BA$
 \[
   A = \bigcap_{n = 1}^{\infty} A_n;~~~ B = \bigcup_{n = 1}^\infty B_n
 .\] 
+\end{task}
 
+\begin{solution}
+
+\smallskip
 \noindent a) При $n \to \infty$ $x$ для $A_n$ стремится к $a$, поскольку он ограничен сверху
 выражением, которое стремится к $a$ ($\lim_{n \to \infty} a + \frac{1}{n} = a$). Поэтому $A = a$, если мы рассматриваем всюду плотное множество.
 
 \medskip
 \noindent b) При $n \to \infty$ для $B_n$ $x : a \le x \le b$, поскольку $\lim_{n \to \infty} b - \frac{1}{n} = b $.
 Поэтому $B$ = $\left\{x: a \le x \le b\right\}$.
+\end{solution}
 
-\bigskip
-\noindentОтвет: a) $A = a$, b) $B = \left\{x: a \le x \le b\right\}$
+\begin{result}
+a) $A = a$, b) $B = \left\{x: a \le x \le b\right\}$
+\end{result}
 
 
-\subsection{Какие подмножества множества $\Omega$ в примере 3 из пар.1 при $n = 3$ соответствуют
-событиям}
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{5}
+Какие подмножества множества $\Omega$ в примере 3 из пар.1 при $n = 3$ соответствуют событиям:
+\end{task}
 
+\begin{solution}
+\par\smallskip
 \noindent~1) При первом подбрасывании выпал герб: $A = \{$ГРР, ГРГ, ГГР, ГГГ$\}$
 
 \medskip
@@ -146,14 +221,23 @@ BA + B\overline{B} = BA$
 
 \medskip
 \noindent~3) Выпало не более одного герба: $A = \{$РРР, РРГ, РГР, ГРР$\}$
+\end{solution}
 
-\bigskip
-\noindentОтвет: 1) $\{$ГРР, ГРГ, ГГР, ГГГ$\}$, 2) $\{$РГГ, ГРГ, ГГР$\}$, 3) $\{$РРР, РРГ, РГР, ГРР$\}$
+\begin{result}
+  1) $\{$ГРР, ГРГ, ГГР, ГГГ$\}$, 2) $\{$РГГ, ГРГ, ГГР$\}$, 3) $\{$РРР, РРГ, РГР, ГРР$\}$
+\end{result}
 
 
-\subsection{Пусть $A, B, C$ -- три произвольных события. Найти выражения для событий, состоящих
-в том, что из $A, B, C$}
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{6}
+Пусть $A, B, C$ -- три произвольных события. Найти выражения для событий, состоящих
+в том, что из $A, B, C$:
+\end{task}
 
+\begin{solution}
+
+\smallskip
 \noindent~1) $A\overline{B}\overline{C}$
 
 \smallskip
@@ -173,16 +257,30 @@ BA + B\overline{B} = BA$
 
 \smallskip
 \noindent~7) $\Omega - ABC = \overline{A} + \overline{B} + \overline{C}$
+\end{solution}
 
 
-\subsection{Пусть в примере 3 из пар.1 $n = 3$. Является ли алгеброй следующая система подмножеств}
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{7}
+Пусть в примере 3 из пар.1 $n = 3$. Является ли алгеброй следующая система подмножеств:
+\end{task}
 
+\begin{solution}
+
+\smallskip
 \noindent~$\emptyset, \Omega, \{$ГГГ, ГРГ, ГГР, ГРР$\}, \{$РГГ, РРГ, РГР, РРР$\}$
 
 \smallskip
 \noindent $\emptyset, \Omega$ входят точно, так как если $\Omega \in U$, то $\emptyset = \Omega \setminus
 \Omega \in U$, также если $\{$ГГГ, ГРГ, ГГР, ГРР$\} \in U$, то и $\Omega \setminus \{$ГГГ, ГРГ, ГГР, ГРР$\} = 
 \{$РГГ, РРГ, РГР, РРР$\} \in U$. Верно.
+\end{solution}
 
-\bigskip
-\noindentОтвет: Да.
+\begin{result}
+Да.
+\end{result}
+
+
+%---------------------------------------------------------------------------------------------------
+
