updated module-{1,2}, config

--- a/Year-2/Theory-of-probabilities/config/config.tex
+++ b/Year-2/Theory-of-probabilities/config/config.tex
@@ -62,7 +62,7 @@
 {\par\bigskip\noindent\textbf{Задание #1.~}}{\smallskip}
 
 \newenvironment{subtask}[1]
-{\par\bigskip\noindent\textbf{Пункт #1.~}\itshape}{}
+{\par\bigskip\noindent\textbf{Пункт #1.~}}{}
 
 % task solution
 \newenvironment{solution}{\medskip\noindent\textbf{Решение}.~}{\hfill$\blacksquare\medskip$}
