--- a/Year-2/Theory-of-probabilities/module-2/tasks.tex
+++ b/Year-2/Theory-of-probabilities/module-2/tasks.tex
@@ -1,9 +1,14 @@
 %! TEX root = main.tex
 \section{Простейшие вероятностные схемы и их обобщения}
 
-\subsection{Брошено 2 игральные кости. Предполагается, что элементарные события равновероятны,
-найти вероятность события, что}
+%---------------------------------------------------------------------------------------------------
+\begin{task}{1}
+Брошено 2 игральные кости. Предполагается, что элементарные события равновероятны,
+найти вероятность события, что:
+\end{task}
 
+\begin{solution}
+\par\smallskip
 \noindent~1) $A = \{$на первой кости выпала 1 $\} = \frac{1}{6}$ 
 
 \medskip
@@ -17,105 +22,175 @@
 \medskip
 \noindent~4) $A \overline{B}$ - на первой кости выпала 1 и не выпала 6. Результат: $\frac{1}{6} \cdot  
 \frac{5}{6} = \frac{5}{36}$ . 
+\end{solution}
 
-\bigskip
-\noindentОтвет: 1) $\frac{1}{6}$, 2) $\frac{5}{6}$, 3) $\frac{5}{36}$
+\begin{result}
+1) $\frac{1}{6}$, 2) $\frac{5}{6}$, 3) $\frac{5}{36}$
+\end{result}
 
 
-\asubsection{2}{Очередная задача про книжные полки}
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{2}
+Очередная задача про книжные полки.
+\end{task}
 
-\noindent Давайте вместо того, чтобы считать все вероятности книг, а оттуда выбирать количество, 
+\begin{solution}
+Давайте вместо того, чтобы считать все вероятности книг, а оттуда выбирать количество, 
 нам удовлетворяющих, возьмем 2 книги, которые нам нужны и скрутим их скотчем. Теперь у нас не 
 $n$ книг, а $n - 1$ книга, кроме того, мы можем взять сначала первую книгу со второй, а можем 
 и наоборот, поэтому итоговая вероятность: $\frac{(n-1)! \cdot 2}{n!} = \frac{2}{n}$.
+\end{solution}
 
-\bigskip
-\noindentОтвет: $\frac{2}{n}$
+\begin{result}
+$\frac{2}{n}$
+\end{result}
 
-\asubsection{3}{Числа 1,2,\ldots,n расставлены случайным образом. Предполагая, что различные 
+
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{3}
+Числа 1,2,\ldots,n расставлены случайным образом. Предполагая, что различные 
 расположения чисел равновероятны, найти вероятность того, что числа 1,2,3 расположены в порядке
-возрастания, но не обязательно рядом}
+возрастания, но не обязательно рядом.
+\end{task}
 
-\noindent $P(\Omega) = 1$, при расставлении чисел от $1,..,n$ случайным образом возможны такие 
+\begin{solution}
+$P(\Omega) = 1$, при расставлении чисел от $1,..,n$ случайным образом возможны такие 
 конфигурации: $123$, $132$, $312$, $321$, $213$, $231$, где между цифрами или до, или после может что-то стоять,
 а может и не стоять. Так как каждое из этих событий равновероятно, а нам подходит лишь 1 событие
 из 6, то искомая вероятность равна $\frac{1}{6}$.
+\end{solution}
 
-\bigskip
-\noindentОтвет: $\frac{1}{6}$
+\begin{result}
+$\frac{1}{6}$
+\end{result}
 
 
-\asubsection{6}{Сравнить вероятности событий}
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{6}
+Сравнить вероятности событий:
+\end{task}
 
-\noindent~1) $A = \{$при одновременном бросании четырех костей выпала хотя бы одна 1$\}$
 
+\begin{subtask}{1}
+$A = \{$при одновременном бросании четырех костей выпала хотя бы одна 1$\}$.
+\end{subtask}
+
+\begin{solution}
 \noindentВероятность того, что на всех костях не выпадет 1 :$\frac{5}{6} \cdot \frac{5}{6} \cdot \frac{5}{6} \cdot
 \frac{5}{6}$. Значит вероятность того, что хотя бы на одном выпадет: $1 - \frac{5^4}{6^4} \approx 0.51774691$
+\end{solution}
 
-\medskip
-\noindent~2) $B = \{$При 24 бросаниях двух костей выпали хотя бы 1 раз две 1$\}$
 
-\noindent Аналогично тому, что выше: вероятность, что не выпадет: $\left(\frac{35}{36}\right)^{24}$,
+\begin{subtask}{2}
+$B = \{$При 24 бросаниях двух костей выпали хотя бы 1 раз две 1$\}$.
+\end{subtask}
+
+\begin{solution}
+Аналогично тому, что выше: вероятность, что не выпадет: $\left(\frac{35}{36}\right)^{24}$,
 значит искомая вероятность: $1 - \left(\frac{35}{36}\right)^{24} \approx 0.491403876$. Результат:
 вероятность 1) больше.
-
-\bigskip
-\noindentОтвет: первая вероятность больше
+\end{solution}
 
 
-\asubsection{7}{В чулане $n$ пар ботинок. Из них случайно выбирается $2r$ ботинок. Найти
-вероятность того, что среди выбранных ботинок}
+\medskip
+\begin{result}
+первая вероятность больше.
+\end{result}
 
-\noindent~a) Нет парных. Всего вероятность выбрать $2r$ ботинок из $n$ пар - $C_{2n}^{2r}$. 
+
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{7}
+В чулане $n$ пар ботинок. Из них случайно выбирается $2r$ ботинок. Найти
+вероятность того, что среди выбранных ботинок.
+\end{task}
+
+\begin{subtask}{a)}
+Нет парных. Всего вероятность выбрать $2r$ ботинок из $n$ пар - $C_{2n}^{2r}$. 
 Количество событий, которые удовлетворяют: необходимо выбрать $2r$ ботинок из $n$, чтобы
 каждый из них был либо левым, либо правым ($2r < n$), что составляет $C_n^{2r}$. Кроме того, 
 ботинок может быть либо левым, либо правые, то есть возможно для $2r$ ботинок $2^{2r}$ возможных
-вариантов. Таким образом, результат:  $\frac{4^r\cdot C_{n}^{2r}}{C_{2n}^{2r}}$
+вариантов. Таким образом, результат:  $\frac{4^r\cdot C_{n}^{2r}}{C_{2n}^{2r}}$.
+\end{subtask}
 
-\medskip
-\noindent~b) Одна пара. Знаменатель остается тем же, в числителе будет $2^{2r - 2} \cdot C_{n - 1}^{2r - 2}$ - вариантов
+\begin{subtask}{b)}
+Одна пара. Знаменатель остается тем же, в числителе будет $2^{2r - 2} \cdot C_{n - 1}^{2r - 2}$ - вариантов
 выбрать $n - 1$ одиночный сапог, умноженное на $n$ - вариантов выбрать полноценную пару. Результат: 
 $\frac{n 2^{2r - 2}C_{n- 1}^{2r - 2}}{C_{2n}^{2r}}$.
-
-\bigskip
-\noindentОтвет: a)$\frac{4^r\cdot C_{n}^{2r}}{C_{2n}^{2r}}$, b) $\frac{n 2^{2r - 2}C_{n- 1}^{2r - 2}}{C_{2n}^{2r}}$
-
-
-\asubsection{8}{В партии изделий 90 исправных и 10 бракованных. Найти вероятность того, что среди
-10 проданных изделий}
-
-\noindent~a) Ровно одно бракованное.
-
-\noindent 10 изделий из 100 можно взять $C_{100}^{10}$ способами. Теперь количество вариантов, 
-которые удовлетворяют условию равно $C_{10}^1$ - выбираем 1 бракованное изделие из 10, $C_{90}^{9}$ 
-- выбираем 9 исправных изделий из 90 всех исправных. Итого: $\frac{10 \cdot C_{90}^{9}}{C_{100}^{10}}
-\approx 0.40799532$
+\end{subtask}
 
 \medskip
-\noindent~b) Нет бракованных.
-
-\noindent Рассуждаем аналогично, только в числителе теперь $C_{90}^{10}$ - кол-во способов выбрать
-10 небракованных изделий. Результат: $\frac{C_{90}^{10}}{C_{100}^{10}} \approx 0.330476211$
-
-\bigskip
-\noindentОтвет: a) $0.40799532$, b) $0.330476211$
+\begin{result}
+a)$\frac{4^r\cdot C_{n}^{2r}}{C_{2n}^{2r}}$, b) $\frac{n 2^{2r - 2}C_{n- 1}^{2r - 2}}{C_{2n}^{2r}}$.
+\end{result}
 
 
-\asubsection{11}{Из множества чисел по схеме выбора с возвращением найти вероятность попадания в
-круг радиуса n}
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{8}
+В партии изделий 90 исправных и 10 бракованных. Найти вероятность того, что среди
+10 проданных изделий.
+\end{task}
 
+
+\begin{subtask}{a)}
+Ровно одно бракованное.
+\end{subtask}
+
+\begin{solution}
+10 изделий из 100 можно взять $C_{100}^{10}$ способами. Теперь количество вариантов, 
+которые удовлетворяют условию равно $C_{10}^1$ - выбираем 1 бракованное изделие из 10, $C_{90}^{9}$ 
+- выбираем 9 исправных изделий из 90 всех исправных. Итого: $\frac{10 \cdot C_{90}^{9}}{C_{100}^{10}}
+\approx 0.40799532$.
+\end{solution}
+
+
+\begin{subtask}{b)}
+Нет бракованных.
+\end{subtask}
+
+\begin{solution}
+Рассуждаем аналогично, только в числителе теперь $C_{90}^{10}$ - кол-во способов выбрать
+10 небракованных изделий. Результат: $\frac{C_{90}^{10}}{C_{100}^{10}} \approx 0.330476211$.
+\end{solution}
+
+
+\medskip
+\begin{result}
+a) $0.40799532$, b) $0.330476211$
+\end{result}
+
+
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{11}
+Из множества чисел по схеме выбора с возвращением найти вероятность попадания в
+круг радиуса n
+\end{task}
+
+\begin{solution}
 \noindent Рассмотрим круг радиуса $n$, его площадь равна $\pi * n^2$. Площадь квадрата, в которой 
 располагается этот круг равна $4 * n^2$, а значит отношение площадей, которое занимает круг в 
 квадрате, составляет $\frac{\pi * n^2}{4 * n^2} = \frac{\pi}{4}$. Это и есть ответ, поскольку
 выбор координат не имеет приоритетов (равновероятный).
+\end{solution}
 
-\bigskip
-\noindentОтвет: $\frac{\pi}{4}$
+\begin{result}
+$\frac{\pi}{4}$
+\end{result}
 
 
-\asubsection{13}{Найти вероятность размещения частиц по ячейкам}
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{13}
+Найти вероятность размещения частиц по ячейкам
+\end{task}
 
-\noindent~a) Вероятность того, что займутся все ячейки равна $\frac{n!}{n^n}$, где в знаменателе 
+\begin{solution}
+\par\noindent~a) Вероятность того, что займутся все ячейки равна $\frac{n!}{n^n}$, где в знаменателе 
 сколько всего различных вариантов, а в числителе - количество вариантов, которые нам подходят (сначала
 кладем частицу в какую-то из $n$ ячеек, затем в какую-то из $n - 1$, и так далее). Значит вероятность
 того, что в какой-то из ячеек не будет частицы равна $1 - \frac{n!}{n^n}$.
@@ -129,31 +204,50 @@ $\frac{n 2^{2r - 2}C_{n- 1}^{2r - 2}}{C_{2n}^{2r}}$.
 еще не важно, под каким номером эта частица, она не обязательно последняя, 
 значит еще $n$ вариантов. Тогда итоговое количество вариантов:
 $n! \cdot (n - 1) / 2$. Результат: $\frac{n! \cdot n \cdot (n - 1) / 2}{n^n}$.
+\end{solution}
 
-\bigskip
-\noindentОтвет: $\frac{n! \cdot n \cdot (n - 1) / 2}{n^n}$
+\begin{result}
+$\frac{n! \cdot n \cdot (n - 1) / 2}{n^n}$
+\end{result}
 
 
-\asubsection{14}{Найти вероятность того, что на две карточки <<Спортлото>> с отмеченными номерами
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{14}
+Найти вероятность того, что на две карточки <<Спортлото>> с отмеченными номерами
 (4,12,38,20,41,46) и (4,12,38,20,41,49) будет получено по одному минимальному выигрышу (угадано по 3
-числа)}
+числа)
+\end{task}
 
-\noindent Общее количество возможных исходов: $C_{49}^6$. Случаи, которые нам удовлетворяют: 
+\begin{solution}
+Общее количество возможных исходов: $C_{49}^6$. Случаи, которые нам удовлетворяют: 
 из первых 5 чисел в лото было угадано ровно 3, поскольку они совпадают на обеих карточках, из 
 первых 5 чисел в лото было угадано ровно 2, а также на каждой карточке было угадано последнее число.
 Рассчитаем количество исходов: $C_5^3 \cdot  C_{42}^3 + C_5^2 \cdot C_{42}^2$, где первый множитель
 в каждом слагаемом - количество вариантов, полученных из угаданных цифр, второй - количество вариантов
 из неугаданных. В результате получим: $\frac{C_5^3 \cdot  C_{42}^3 + C_5^2 \cdot C_{42}^2}{C_{49}^6} \approx 
 0.008825201$
+\end{solution}
 
-\bigskip
-\noindentОтвет: $ \approx 0.008825201$
+\begin{result}
+$\approx 0.008825201$
+\end{result}
 
-\asubsection{15}{На отрезок $\left[a, b\right]$ наудачу брошена точка}
 
-\noindent~Так как сама $F$ является линейной, то ее производная есть константа. В данном случае, 
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{15}
+На отрезок $\left[a, b\right]$ наудачу брошена точка
+\end{task}
+
+\begin{solution}
+Так как сама $F$ является линейной, то ее производная есть константа. В данном случае, 
 так как мы рассматриваем отрезок $\left[a, b\right] = \left[0, 1\right] $, то $F'(x) = 1$ на отрезке 
 $\left[a, b\right] $.
+\end{solution}
 
-\bigskip
-\noindentОтвет: $F'(x) = 1, x \in \left[a, b\right]$
+\begin{result}
+$F'(x) = 1, x \in \left[a, b\right]$
+\end{result}
+%---------------------------------------------------------------------------------------------------
+
