--- a/Year-2/Theory-of-probabilities/config/config.tex
+++ b/Year-2/Theory-of-probabilities/config/config.tex
@@ -70,3 +70,7 @@
 % task result
 \newenvironment{result}{\medskip\noindent\textbf{Ответ:}~}{\medskip}
 
+
+%-signs--------------------------------------------------------------------------------------------
+% module
+\newcommand{\abs}[1]{\left\lvert#1\right\rvert}
