--- a/Year-2/Theory-of-probabilities/main.tex
+++ b/Year-2/Theory-of-probabilities/main.tex
@@ -15,5 +15,6 @@
 \newpage
 \import{module-1}{tasks.tex}
 \import{module-2}{tasks.tex}
+\import{module-3}{tasks.tex}
 \end{sloppypar}
 \end{document}
