--- a/Year-2/Theory-of-probabilities/main.tex
+++ b/Year-2/Theory-of-probabilities/main.tex
@@ -16,5 +16,6 @@
 \import{module-1}{tasks.tex}
 \import{module-2}{tasks.tex}
 \import{module-3}{tasks.tex}
+\import{module-4}{tasks.tex}
 \end{sloppypar}
 \end{document}
