--- a/Year-2/Theory-of-probabilities/module-5/tasks.tex
+++ b/Year-2/Theory-of-probabilities/module-5/tasks.tex
@@ -417,3 +417,24 @@ P(k = 2, 3, 4, \dots) = 1 - \overline{P(k = 2, 3, 4, \dots)} = 1 - P(k = 0, 1) =
 $0.594$
 \end{result}
 
+%---------------------------------------------------------------------------------------------------
+\medskip
+\begin{task}{22}
+  Случайная величина $\xi$ с равномерным распределением на $[0, 1]$ записывается в виде бесконечной 
+  десятичной дроби: $\xi = \sum_{n=1}^{\infty} \xi_n (10)^{-n}$, $0 \le  \xi_n \le 9$. Найти
+  совместные и одномерные распределения величин $\xi_1, \xi_2$. Являются ли $\xi_1, \xi_2$ 
+  независимыми.
+\end{task}
+
+\begin{solution}
+\[
+P(\xi_1 = i) = \frac{1}{10},\; i \in \{0, 1, \dots, 9\} 
+.\] 
+\[
+P(\xi_2 = j) = \frac{1}{10},\; j \in \{0, 1, \dots, 9\} 
+.\] 
+\[
+P(\xi_1 = i, \xi_2 = j) = \frac{1}{100} = P(\xi_1 = i) P(\xi_2 = j)
+.\] Значит независимы.
+\end{solution}
+
