--- a/Year-2/Theory-of-probabilities/module-6/main.tex
+++ b/Year-2/Theory-of-probabilities/module-6/main.tex
@@ -1,7 +1,7 @@
-% include preambule
-\input{config/config.tex}
+% add configuration
+\input{../config/config.tex}
 %----title-----------------------------------------------------------------------------------------
-\title{Теория вероятностей\\ Домашняя работа}
+\title{Теория вероятностей\\ Домашняя работа к модулю №6}
 \date{2022}
 \author{Кулаков Никита P3230}
 
@@ -13,11 +13,8 @@
 \begin{sloppypar}
 \tableofcontents
 \newpage
-\import{module-1}{tasks.tex}
-\import{module-2}{tasks.tex}
-\import{module-3}{tasks.tex}
-\import{module-4}{tasks.tex}
-\import{module-5}{tasks.tex}
-\import{module-6}{tasks.tex}
+\input{tasks.tex}
+
 \end{sloppypar}
+
 \end{document}
