--- a/Year-2/Theory-of-probabilities/module-6/tasks.tex
+++ b/Year-2/Theory-of-probabilities/module-6/tasks.tex
@@ -1,6 +1,6 @@
 %! TEX root = main.tex
 
-\section{Случайные величины.}
+\section{Математическое ожидание.}
 
 \begin{task}{1}
   Найти математическое ожидание величины $\tau$, определенной в задаче 14 гл. 5.
