--- a/Year-2/Theory-of-probabilities/module-1/tasks.tex
+++ b/Year-2/Theory-of-probabilities/module-1/tasks.tex
@@ -134,7 +134,9 @@ $\left(A \setminus B\right)\left(C \setminus D\right) = AC \setminus BD$
 \begin{solution}
 $\left(A \setminus B\right) \left(C \setminus D\right) = A\overline{B}C\overline{D} =
 \left(AC\right)\left(\overline{B}~\overline{D}\right) = \left(AC\right)\overline{\left(
-B + D\right)} = \left(AC\right) \setminus \left(B + D\right)$. Неверно.
+B + D\right)} = \left(AC\right) \setminus \left(B + D\right)$.
+
+\noindentНеверно.
 \end{solution}
 
 
