--- a/Year-2/Theory-of-probabilities/module-4/tasks.tex
+++ b/Year-2/Theory-of-probabilities/module-4/tasks.tex
@@ -46,7 +46,8 @@ P(A_1) = \frac{2}{7} + \frac{4}{7} \cdot \frac{3}{6} \cdot  \frac{2}{5} + \frac{
 P(B) = \frac{1}{7} + \frac{4}{7} \cdot \frac{1}{6} + \frac{4}{7} \cdot \frac{3}{6} \cdot \frac{1}{5} +
 \frac{4}{7} \cdot \frac{3}{6} \cdot \frac{2}{5} \cdot \frac{1}{4} + \frac{4}{7} \cdot \frac{3}{6} \cdot 
 \frac{2}{5} \cdot \frac{1}{4} \cdot \frac{1}{3} =  \frac{1}{7} + \frac{4}{42} + \frac{12}{210} + 
-\frac{24}{840} + \frac{24}{2520} = \frac{840}{2520} = \frac{1}{3} &&
+\frac{24}{840} + \frac{24}{2520} =  \\
+= \frac{840}{2520} = \frac{1}{3} &&
 \end{flalign*}
 \end{solution}
 
