--- a/Year-2/Theory-of-probabilities/module-5/tasks.tex
+++ b/Year-2/Theory-of-probabilities/module-5/tasks.tex
@@ -164,7 +164,7 @@ e^{\frac{-\ln(x)^2}{2}}$.
 \[
 F(x) = x + \int_x^1 \frac{x}{t} dt = x + x \cdot \ln|x|\bigg|_x^1 = x - x \cdot  \ln x
 .\] Тогда \[
-p_\xi(x) = F'(x) = 1 - \ln|x| - \frac{x}{x} = - x \cdot  \ln|x|
+p_\xi(x) = F'(x) = 1 - \ln|x| - \frac{x}{x} = - \ln|x|
 .\] 
 \begin{center}
 \scalebox{1.5}{
